<resources>
    <string name="app_name">zip viewer</string>
    <string name="app_name_camel">Zip Viewer</string>

    <string name="choose_file">Chọn file</string>
    <string name="label_choose_file_from">Chọn file từ</string>
    <string name="file_icon">File Icon</string>
    <string name="directory_description">Thư mục (%d item)</string>
    <string name="press_again_to_exit">Bấm lần nữa để thoát</string>
    <string name="add_file">Thêm file</string>
    <string name="time_format">%s\n%s</string>
    <string name="close_tab">Đóng tab</string>
    <string name="open_file_from">Mở file từ</string>
    <string name="local_file_system">Bộ nhớ hệ thống</string>
    <string name="url">Url</string>
    <string name="input_url">Nhập File Url</string>
    <string name="cancel">Hủy</string>
    <string name="open">Mở</string>
    <string name="invalid_url">Url không hợp lệ</string>
    <string name="not_a_zip_file">Không phải file Zip</string>
    <string name="error_occurred">Có lỗi xảy ra</string>
    <string name="cannot_resolve_host">Không thể kết nối đến url</string>
    <string name="unknown_size">Không rõ kích thước</string>
    <string name="download">Tải về</string>
    <string name="detail">Chi tiết</string>
    <string name="downloaded">Đã tải xuống %s %s</string>
    <string name="downloading">Đang tải xuống %s %s</string>
    <string name="download_error">Lỗi tải xuống %s %s</string>
    <string name="file">file</string>
    <string name="directory">thư mục</string>
    <string name="root">root</string>
</resources>