<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null">

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/darkBackgroundAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="@dimen/sizeRoundCornerRadiusLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleTextView"
                style="@style/AppTheme.Light.Text.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/input_url"
                android:textAlignment="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/darkWeakGray"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleTextView" />

            <EditText
                android:id="@+id/urlEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/shape_edit_text"
                android:drawableStart="@drawable/url"
                android:drawableLeft="@drawable/url"
                android:drawablePadding="8dp"
                android:hint="@string/url"
                android:inputType="textUri"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingEnd="48dp"
                android:paddingRight="48dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line"
                tools:text="https://drive.google.com/uc?export=download&amp;id=1Zson--ESF9M2AhsN7n1AQoGeF06NmiFK" />

            <ImageView
                android:id="@+id/swapImgView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="4dp"
                android:src="@drawable/swap"
                app:layout_constraintBottom_toBottomOf="@id/urlEditText"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@id/urlEditText"
                app:layout_constraintTop_toTopOf="@id/urlEditText" />

            <TextView
                android:id="@+id/warningTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="center"
                android:textColor="@color/darkErrorText"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/urlEditText"
                tools:text="@string/invalid_url"
                tools:visibility="visible" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/loadingAnimView"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/warningTextView"
                app:lottie_enableMergePathsForKitKatAndAbove="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/loading"
                app:lottie_renderMode="software"
                tools:visibility="visible" />

            <ImageView
                android:layout_marginTop="8dp"
                android:id="@+id/fileExtensionImgView"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:contentDescription="@string/file_icon"
                android:src="@drawable/zip"
                android:visibility="gone"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@id/fileNameTextView"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loadingAnimView"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/fileNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:textStyle="bold"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/fileExtensionImgView"
                app:layout_constraintTop_toTopOf="@id/fileExtensionImgView"
                tools:text="test_db-master.zippppppppppppppppppppppppppppppppppppppppppppppppppp" />

            <TextView
                android:id="@+id/fileSizeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/fileNameTextView"
                app:layout_constraintTop_toBottomOf="@id/fileNameTextView"
                tools:text="34.99 MB" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/cancel"
                android:theme="@style/ButtonTheme.Cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/openButton"
                app:layout_constraintTop_toBottomOf="@id/fileExtensionImgView" />

            <Button
                android:id="@+id/openButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/open"
                app:layout_constraintLeft_toRightOf="@id/cancelButton"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/cancelButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
